--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:image" content="/images/social.jpg">
 	<meta name="twitter:card" content="summary_large_image">
 	<!-- styles -->
-	<link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
@@ -39,14 +39,14 @@
 		<p>Открой кофейный мир с друзьями — на любой платформе:</p>
 		<div class="store-buttons">
 			<a class="store" id="appstore" href="#" itemscope itemtype="https://schema.org/SoftwareApplication">
-				<img src="images/Download_on_the_App_Store_Badge_RU_RGB_wht_100317.svg" alt="App Store" />
+				<img src="/images/Download_on_the_App_Store_Badge_RU_RGB_wht_100317.svg" alt="App Store" />
 				<meta itemprop="operatingSystem" content="iOS" />
 				<meta itemprop="applicationCategory" content="Lifestyle" />
 				<meta itemprop="name" content="PerfectCup" />
 				<meta itemprop="url" content="#" />
 			</a>
 			<a class="store" id="googleplay" href="#" itemscope itemtype="https://schema.org/SoftwareApplication">
-				<img src="images/GetItOnGooglePlay_Badge_Web_color_Russian.png" alt="Google Play" />
+				<img src="/images/GetItOnGooglePlay_Badge_Web_color_Russian.png" alt="Google Play" />
 				<meta itemprop="operatingSystem" content="Android" />
 				<meta itemprop="applicationCategory" content="Lifestyle" />
 				<meta itemprop="name" content="PerfectCup" />
@@ -59,7 +59,7 @@
 	<footer>
 		<p>&copy; 2025 PerfectCup</p>
 	</footer>
-	<script src="app.js"></script>
+	<script src="/app.js"></script>
 </body>
 
 </html>
