--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<img src="logo.svg" alt="PerfectCup логотип" />
+			<img src="/logo.svg" alt="PerfectCup логотип" />
 			<h1>PerfectCup</h1>
 		</div>
 	</header>
