--- a/index.html
+++ b/index.html
@@ -38,19 +38,21 @@
 		<h2>Скачай приложение</h2>
 		<p>Открой кофейный мир с друзьями — на любой платформе:</p>
 		<div class="store-buttons">
-			<a class="store" id="appstore" href="#" itemscope itemtype="https://schema.org/SoftwareApplication">
+			<a class="store" id="appstore" href="https://apps.apple.com/us/app/perfectcup/id6746118602" itemscope
+				itemtype="https://schema.org/SoftwareApplication">
 				<img src="/images/Download_on_the_App_Store_Badge_RU_RGB_wht_100317.svg" alt="App Store" />
 				<meta itemprop="operatingSystem" content="iOS" />
 				<meta itemprop="applicationCategory" content="Lifestyle" />
 				<meta itemprop="name" content="PerfectCup" />
-				<meta itemprop="url" content="#" />
+				<meta itemprop="url" content="https://apps.apple.com/us/app/perfectcup/id6746118602" />
 			</a>
-			<a class="store" id="googleplay" href="#" itemscope itemtype="https://schema.org/SoftwareApplication">
+			<a class="store" id="googleplay" href="https://play.google.com/store/apps/details?id=ru.yourperfectcup.app"
+				itemscope itemtype="https://schema.org/SoftwareApplication">
 				<img src="/images/GetItOnGooglePlay_Badge_Web_color_Russian.png" alt="Google Play" />
 				<meta itemprop="operatingSystem" content="Android" />
 				<meta itemprop="applicationCategory" content="Lifestyle" />
 				<meta itemprop="name" content="PerfectCup" />
-				<meta itemprop="url" content="#" />
+				<meta itemprop="url" content="https://play.google.com/store/apps/details?id=ru.yourperfectcup.app" />
 			</a>
 		</div>
 		<a href="https://www.yourperfectcup.ru/" class="back-btn">← Назад на сайт</a>
